package smartcampus;
public record Course(String code, String title, String instructor, int capacity) {}
