package smartcampus;
public record Student(String id, String name, String email, String department) {}
